--- a/README.rdoc
+++ b/README.rdoc
@@ -25,19 +25,32 @@ The Gelf::Logger is compatible with the standard Ruby Logger interface and can b
 Under the hood it uses Gelf::Notifier to send log messages via UDP to Graylog2.
 
   logger = GELF::Logger.new("localhost", 12201, "WAN", { :facility => "appname" })
-  
+
   logger.debug "foobar"
   logger.info "foobar"
   logger.warn "foobar"
   logger.error "foobar"
   logger.fatal "foobar"
-  
+
   logger << "foobar"
 
 Since it's compatible with the Logger interface, you can also use it in your Rails application:
 
   # config/environments/production.rb
   config.logger = GELF::Logger.new("localhost", 12201, "WAN", { :facility => "appname" })
+
+
+=== Sending GELF logs using TCP instead of UDP (default)
+
+This fork adds TCP support to GELF using _@zsprackett_'s pull
+request:https://github.com/Graylog2/gelf-rb/pull/21 on the
+parent gelf-rb repository.
+
+An example of how it can be used is as folllows. In your GELF::Logger
+initialization, you define a protocol key.
+
+  logger = GELF::Logger.new("localhost", 12201, "WAN", { :facility => "appname",
+    protocol: GELF::Protocol::TCP})
 
 == Note on Patches/Pull Requests
 
