--- a/README.rdoc
+++ b/README.rdoc
@@ -50,13 +50,13 @@ An example of how it can be used is as folllows. In your GELF::Logger
 initialization, you define a protocol key.
 
   logger = GELF::Logger.new("localhost", 12201, "WAN", { :facility => "appname",
-    protocol: GELF::Protocol::TCP})
+    :protocol: GELF::Protocol::TCP})
 
 This fork add TLS support for TCP https://github.com/edefaria/gelf-rb based of the previous fork.
 
 An example of how to use TLS encryption with a good level of security.
-  logger = GELF::Logger.new("localhost", 12201, "WAN", { :facility => "appname",
-    protocol: GELF::Protocol::TCP, tls: true, check_ssl: true, tls_version: "TLSv1_2")
+  logger = GELF::Logger.new("localhost", 12201, "WAN", { :facility => "appname" },
+    { :protocol: GELF::Protocol::TCP, :tls: true, :check_ssl: true, :tls_version: "TLSv1_2" })
 
 == Note on Patches/Pull Requests
 
